--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>XREZ</title>
+    <title>xREZ</title>
     <link href="static/css/app.css" rel="stylesheet" />
 </head>
 <body>
-    <h1>XREZ</h1>
+
     <div class="container">
 
-        Um empresa especialista em Marketing Digital e desenvolvimento de Software Web!!
+      <div class="appform" id="appform"></div>
 
     </div>
 
