Update e add inputs e css

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,15 +8,36 @@
     <title>xREZ</title>
     <link href="static/css/app.css" rel="stylesheet" />
 </head>
+
 <body>
 
     <div class="container">
 
-      <div class="appform" id="appform"></div>
+        <div class="appform" id="appform">
+
+          
+            <div class="inputsform">
+                <input type="text" value="usuario" id="user"/>
+            </div>
+
+
+            <div class="inputsform">
+                <input type="password" value="password" id="passwd"/>
+            </div>
+        
+            <div class="separator"></div>
+
+
+            <div class="inputsform buttonDV">
+                <button>Acessar</button>
+            </div>
+
+        </div>
 
     </div>
 
 
     <script src="static/js/app.js"></script>
 </body>
+
 </html>
